[gd_scene load_steps=26 format=2]

[ext_resource path="res://objects/trees/BaseTree.gd" type="Script" id=1]
[ext_resource path="res://assets/monochrome_transparent_packed.png" type="Texture" id=2]
[ext_resource path="res://objects/common/HealthSystem.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/art/tile495.png" type="Texture" id=4]
[ext_resource path="res://resources/shaders/dissolve2D.shader" type="Shader" id=5]
[ext_resource path="res://objects/enemies/PlayerDetectionZone.tscn" type="PackedScene" id=6]

[sub_resource type="OpenSimplexNoise" id=1]
seed = 2
period = 4.0
persistence = 0.09
lacunarity = 0.89

[sub_resource type="NoiseTexture" id=2]
seamless = true
noise = SubResource( 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/base_color = Color( 1, 1, 1, 1 )
shader_param/burn_color = Color( 0.898039, 0.12549, 0, 1 )
shader_param/burn_size = 0.0
shader_param/dissolve_amount = 0.0
shader_param/emission_amount = 2.003
shader_param/dissolve_texture = SubResource( 2 )

[sub_resource type="ShaderMaterial" id=4]

[sub_resource type="CapsuleShape2D" id=5]
radius = 12.0
height = 36.0

[sub_resource type="Gradient" id=6]
offsets = PoolRealArray( 0, 0.134409, 0.715054, 1 )
colors = PoolColorArray( 1, 0, 0, 0, 0.976563, 0.228557, 0, 1, 1, 0.500977, 0, 1, 0.878906, 0.466358, 0, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )

[sub_resource type="Curve" id=8]
_data = [ Vector2( 0, 0 ), 0.0, 3.35598, 0, 0, Vector2( 1, 0.969318 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=9]
curve = SubResource( 8 )

[sub_resource type="ParticlesMaterial" id=10]
emission_shape = 2
emission_box_extents = Vector3( 8, 24, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 9 )
color_ramp = SubResource( 7 )

[sub_resource type="Gradient" id=11]
offsets = PoolRealArray( 0, 0.123656, 0.77957, 1 )
colors = PoolColorArray( 0.236585, 0.710449, 0, 0, 0, 0.507324, 0.0926461, 1, 0.338148, 0.890137, 0, 1, 0.341176, 0.890196, 0.00784314, 0 )

[sub_resource type="GradientTexture" id=12]
gradient = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
emission_shape = 1
emission_sphere_radius = 26.33
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
radial_accel = 0.5
radial_accel_random = 0.5
tangential_accel = 0.5
tangential_accel_random = 0.5
scale = 2.0
color_ramp = SubResource( 12 )

[sub_resource type="Animation" id=14]

[sub_resource type="Animation" id=15]
tracks/0/type = "value"
tracks/0/path = NodePath("FireParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=16]
tracks/0/type = "value"
tracks/0/path = NodePath("FireParticles2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("FireParticles2D:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("GreenParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=17]
tracks/0/type = "value"
tracks/0/path = NodePath("FireParticles2D:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
tracks/0/type = "value"
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 1e-05 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Node2D/Stem:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 2, 0.5 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Node2D/Sprite2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("FireParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("GreenParticles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 44, 36 )

[node name="BaseTree" type="Area2D"]
z_index = -1
collision_layer = 192
collision_mask = 68
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
material = SubResource( 3 )
scale = Vector2( 2, 2 )

[node name="Stem" type="Sprite" parent="Node2D"]
modulate = Color( 0.596078, 0.376471, 0, 1 )
material = SubResource( 4 )
use_parent_material = true
scale = Vector2( 1, 0.04 )
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 320, 96, 16, 16 )

[node name="Sprite2" type="Sprite" parent="Node2D"]
self_modulate = Color( 0.160784, 0.827451, 0, 1 )
use_parent_material = true
position = Vector2( 0, -14 )
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 2 )
offset = Vector2( 0, -8 )
region_enabled = true
region_rect = Rect2( 304, 80, 16, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -28 )
shape = SubResource( 5 )

[node name="HealthSystem" parent="." instance=ExtResource( 3 )]
max_health = 10
current_health = 10
regen_amount = 1

[node name="FireParticles2D" type="Particles2D" parent="."]
position = Vector2( 0, -32 )
emitting = false
amount = 20
lifetime = 2.0
preprocess = 1.0
process_material = SubResource( 10 )
texture = ExtResource( 4 )

[node name="GreenParticles2D" type="Particles2D" parent="."]
position = Vector2( 0, -40 )
amount = 20
lifetime = 4.0
preprocess = 1.0
process_material = SubResource( 13 )

[node name="BurnTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/New Anim" = SubResource( 14 )
anims/burned = SubResource( 15 )
anims/burning = SubResource( 16 )
anims/extinguish = SubResource( 17 )
anims/grow = SubResource( 18 )

[node name="CoolDownTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
position = Vector2( 0, -36 )
shape = SubResource( 19 )
[connection signal="health_zero" from="HealthSystem" to="." method="_on_HealthSystem_health_zero"]
[connection signal="timeout" from="BurnTimer" to="." method="_on_BurnTimer_timeout"]
[connection signal="timeout" from="CoolDownTimer" to="." method="_on_CoolDownTimer_timeout"]
[connection signal="body_entered" from="PlayerDetectionZone" to="." method="_on_PlayerDetectionZone_body_entered"]

[editable path="PlayerDetectionZone"]
